--- a/src/main.html
+++ b/src/main.html
@@ -27,11 +27,16 @@
         <h5>Nombre de promoción</h5>
         <input id="name-input"class="form-control" type="text" placeholder="Nombre de promoción">
     </div>
-    <button id="btn-prom"  class="btn btn-secondary"> Crear promoción</button>
 
+    <button id="btn-prom" class="btn btn-secondary" type="button" >
+        <div id="loading" class="hidden">
+            <span class="spinner-border spinner-border-sm  " role="status" aria-hidden="true"></span>
+            <span class=""> Procesando </span>
+        </div>
+        <span id="btn-label"> Crear promoción</span>
+    </button>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
