--- a/src/table_promotion/table_promotion.html
+++ b/src/table_promotion/table_promotion.html
@@ -25,7 +25,7 @@
 <body>
 
 
-    <div id=""></div>
+    <div id="data_table_wrapper"></div>
     <div id="no_data_message">
         <h5>No marks selected</h5>
     </div>
