--- a/src/button_analisis_global/button_client_story.html
+++ b/src/button_analisis_global/button_client_story.html
@@ -19,7 +19,7 @@
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
     <!-- Include our own style sheets and javascript code -->
     <link rel="stylesheet" href="./button_add_cart.css">
-    <script id="script_button" src="./button_add_cart.js" worksheetName="analisisGlobal.Articulos Recomendados"></script>
+    <script id="script_button" src="./button_add_cart.js" worksheetName="Cliente.OcultoArticulosRecomendados"></script>
 </head>
 
 <body>
