--- a/src/button_add_cart/button_analisis_global.html
+++ b/src/button_add_cart/button_analisis_global.html
@@ -9,7 +9,9 @@
     <!-- These two libraries are copied from the download builder here: https://datatables.net/download/ -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/cr-1.5.0/fh-3.1.4/r-2.2.2/sc-2.0.0/datatables.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <!-- These two libraries are copied from the download builder here: hhttps://www.w3schools.com/w3css/w3css_icons.asp -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/cr-1.5.0/fh-3.1.4/r-2.2.2/sc-2.0.0/datatables.min.js">
     </script>
 
@@ -27,6 +29,9 @@
 
     <button id="btn-prom" class="btn btn-secondary" type="button" >
         <span id="btn-label"> Añadir al carro</span>
+        <span class="material-icons">
+            shopping_cart
+            </span>
     </button>
 
     
