--- a/src/table_promotion/table_promotion.html
+++ b/src/table_promotion/table_promotion.html
@@ -23,12 +23,11 @@
 </head>
 
 <body>
-
-
-    <div id="data_table_wrapper"></div>
     <div id="no_data_message">
-        <h5>No marks selected</h5>
+        <h5>No se ha añadido nada al carrito</h5>
     </div>
+    <div id="data_table_wrapper"></div>
+
     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
