fix bug button product 2

--- a/src/button_add_cart/button_product_2.html
+++ b/src/button_add_cart/button_product_2.html
@@ -17,13 +17,13 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/cr-1.5.0/fh-3.1.4/r-2.2.2/sc-2.0.0/datatables.min.js">
     </script>
 
-    <title>Crear promoción</title>
+    <title>Agregar al carrito</title>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau <script src="../lib/require.min.js"></script> -->
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
     <!-- Include our own style sheets and javascript code -->
     <link rel="stylesheet" href="./button_add_cart.css">
-    <script id="script_button" src="./button_add_cart.js" worksheetName="Oculto.Recomendacion promocion" ></script>
+    <script id="script_button" src="./button_add_cart.js" worksheetName="Articulos Recomendacion.OcultoArticulosRecomendados" ></script>
 </head>
 
 <body>
