--- a/src/button_add_cart/button_analisis_global.html
+++ b/src/button_add_cart/button_analisis_global.html
@@ -8,7 +8,7 @@
 
     <!-- These two libraries are copied from the download builder here: https://datatables.net/download/ -->
     <link rel="stylesheet" type="text/css" href="../../lib/datatables.min.css" />
-    <link rel="stylesheet" href="../../lib/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../lib/bootstrap.min.css">
     <!-- These two libraries are copied from the download builder here: hhttps://www.w3schools.com/w3css/w3css_icons.asp -->
     <link rel="stylesheet" href="../../lib/w3.css">
     <link rel="stylesheet" href="../../lib/font-google-api.css">
@@ -35,8 +35,8 @@
     </button>
 
     
-<script src="../../lib/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="../../lib/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../../lib/popper.min.js"></script>
+<script src="../../lib/bootstrap.min.js" ></script>
 </body>
 
 </html>
