--- a/src/main.html
+++ b/src/main.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="input-group">
-        <h5>Nombre de promoción</h5>
+        <h5>Nombre de campaña</h5>
         <input id="name-input"class="form-control" type="text" placeholder="Nombre de promoción">
     </div>
 
@@ -33,7 +33,7 @@
             <span class="spinner-border spinner-border-sm  " role="status" aria-hidden="true"></span>
             <span class=""> Procesando </span>
         </div>
-        <span id="btn-label"> Crear promoción</span>
+        <span id="btn-label"> Crear campaña</span>
     </button>
 
 
