--- a/src/table_promotion/table_promotion.html
+++ b/src/table_promotion/table_promotion.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+  <div id="no_data_message">
+    <h5>No se ha añadido nada al carrito</h5>
+</div>
     <table id="table"class="table">
         <thead>
           <tr>
