--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../lib/datatables.min.js">
     </script>
 
-    <title>Crear promoción</title>
+    <title>Crear Campaña</title>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau <script src="../lib/require.min.js"></script> -->
     <script src="../lib/tableau.extensions.1.latest.js"></script>
