--- a/src/button_add_cart/button_analisis_global.html
+++ b/src/button_add_cart/button_analisis_global.html
@@ -21,7 +21,7 @@
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
     <!-- Include our own style sheets and javascript code -->
     <link rel="stylesheet" href="./button_add_cart.css">
-    <script id="script_button" src="./button_add_cart.js" worksheetName="analisisGlobal.Articulos Recomendados"></script>
+    <script id="script_button" src="./button_add_cart.js" worksheetName="Oculto analisisGlobal.Filtro.Recomendados"></script>
 </head>
 
 <body>
