--- a/src/button_add_cart/button_analisis_global.html
+++ b/src/button_add_cart/button_analisis_global.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="../../lib/datatables.min.js">
     </script>
 
-    <title>Agregar al carrito </title>
+    <title>Análisis Global - Agregar al carrito Boton</title>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau <script src="../lib/require.min.js"></script> -->
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
