--- a/src/table_promotion/table_promotion.html
+++ b/src/table_promotion/table_promotion.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../../lib/datatables.min.js">
     </script>
 
-    <title>Crear promoción</title>
+    <title>Resultados</title>
 
     <!-- Include the Tableau Extensions library so we can communicate with Tableau <script src="../lib/require.min.js"></script> -->
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
