--- a/src/main.html
+++ b/src/main.html
@@ -29,11 +29,14 @@
     </div>
 
     <button id="btn-prom" class="btn btn-secondary" type="button" >
-        <div id="loading" class="hidden">
-            <span class="spinner-border spinner-border-sm  " role="status" aria-hidden="true"></span>
-            <span class=""> Procesando </span>
+        <div id="loading"  class="hidden" >
+            <span class=""> Procesando.. </span>
+            <div class="spin"></div>
         </div>
+        
         <span id="btn-label"> Crear campaña</span>
+      
+
     </button>
 
 
