remove use of local storage

--- a/src/button_add_cart/button_client_story.html
+++ b/src/button_add_cart/button_client_story.html
@@ -22,7 +22,7 @@
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
     <!-- Include our own style sheets and javascript code -->
     <link rel="stylesheet" href="./button_add_cart.css">
-    <script id="script_button" src="./button_add_cart.js" worksheetName="Oculto Cliente.Filtro.Recomendados"></script>
+    <script id="script_button" src="./button_add_cart.js" worksheetName="Cliente.ArticulosRecomendados"></script>
 </head>
 
 <body>
