--- a/src/button_add_cart/button_client_story.html
+++ b/src/button_add_cart/button_client_story.html
@@ -22,6 +22,7 @@
     <script src="../../lib/tableau.extensions.1.latest.js"></script>
     <!-- Include our own style sheets and javascript code -->
     <link rel="stylesheet" href="./button_add_cart.css">
+    <!-- worksheetName = the sheet name(can be hidden) containing the list of recomendation to save to the cart -->
     <script id="script_button" src="./button_add_cart.js" worksheetName="Cliente.ArticulosRecomendados"></script>
 </head>
 
